--- a/Online Shop/BrisanjeProizvoda.html
+++ b/Online Shop/BrisanjeProizvoda.html
@@ -1,10 +1,92 @@
 ﻿<!DOCTYPE html>
-<html>
+<html data-bs-theme="light">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <meta name="viewport" content="width=device-width" />
+    <title>Brisanje Proizvoda - Shopy</title>
+    <link rel="stylesheet" href="Content/bootstrap.min.css">
+    <script src="Scripts/jquery-3.7.0.min.js"></script>
+    <script src="Scripts/bootstrap.min.js"></script>
+    <script src="Scripts/bootstrap.bundle.min.js"></script>
+    <script src="Scripts/modernizr-2.8.3.js"></script>
+    <script>
+        // ako je ulogovan, prebaci ga na index - slucaj da ide na back opciju
+        $.ajax({
+            url: "/api/auth/Ulogovan",
+            type: "GET",
+            async: false,
+            cache: false,
+            dataType: "json",
+            contentType: "application/json; charset=utf-8",
+            success: function (response) {
+                if (response != null) {
+                    if (JSON.parse(response).Kod !== 0) // korisnik je ulogovan, ne moze da se registruje
+                    {
+                        window.location.href = "Index.html";
+                    }
+                }
+            }
+        });
+
+        // ako je ulogovan, prebaci prikazi meni u zavisnoti od uloge
+        $.ajax({
+            url: "/api/auth/AuthKorisnik",
+            type: "GET",
+            async: false,
+            cache: false,
+            dataType: "json",
+            contentType: "application/json; charset=utf-8",
+            success: function (response) {
+                var data = JSON.parse(response);
+                if (data.KorisnickoIme !== "") {
+                    // prikazi podatke i promeni meni
+                    // sakri dugmice za login i register
+                    $(function () {
+                        // Prikazi samo dugmice vezane za korisnika koji ima datu ulogu
+                        var uloga = data.Uloga;
+
+                        if (uloga !== 2) {
+                            // nije pitanju administrator - povratak na pocetnu stranicu
+                            window.location.href = "MojProfil.html";
+                        }
+
+                        // id iz url
+                        let searchParams = new URLSearchParams(window.location.search)
+                        var Id = searchParams.get('id');
+
+                        // obrisi proizvod po id
+                        $.ajax({
+                            url: "/api/products/BrisanjeProizvoda",
+                            type: "POST",
+                            data: JSON.stringify({
+                                id: Id
+                            }),
+                            async: false,
+                            cache: false,
+                            dataType: "json",
+                            contentType: "application/json; charset=utf-8",
+                            success: function (response) {
+                                var data = JSON.parse(response);
+
+                                if (uloga === 1) {
+                                    // u pitanju je prodavac, on se preusmerava na stranicu svojih proizvoda
+                                    window.location.href = "MojiProizvodi.html?msg=" + data.Poruka;
+                                    return false;
+                                }
+                                else if (uloga == 2) {
+                                     // u pitanju je administrator, on se preusmerava na stranicu svih proizvoda
+                                    window.location.href = "ListaProizvoda.html?msg=" + data.Poruka;
+
+                                }
+                            }
+                        });
+                    });
+                }
+
+            }
+        });
+    </script>
 </head>
 <body>
-
 </body>
 </html>
