--- a/Online Shop/ListaProizvoda.html
+++ b/Online Shop/ListaProizvoda.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Moji Proizvodi - Shopy</title>
+    <title>Lista Proizvoda - Shopy</title>
     <link rel="stylesheet" href="Content/bootstrap.min.css">
     <script src="Scripts/jquery-3.7.0.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
@@ -81,8 +81,8 @@
                         // Prikazi samo dugmice vezane za korisnika koji ima datu ulogu
                         var uloga = data.Uloga;
 
-                        if (uloga !== 1) {
-                            // nije pitanju prodavac - povratak na pocetnu stranicu
+                        if (uloga !== 2) {
+                            // nije pitanju admin - povratak na pocetnu stranicu
                             window.location.href = "MojProfil.html";
                         }
                     });
@@ -101,7 +101,7 @@
 
         // get metoda za dobijanje listi svih proizvoda za korisnika
         $.ajax({
-            url: "/api/products/ListaProizvoda",
+            url: "/api/products/SviProizvodi",
             type: "GET",
             async: false,
             cache: false,
@@ -180,10 +180,10 @@
                 var combo = $("#sort").val().toString();
                 var primenjeno = $("#dostupni").is(":checked") ? "1;" : "0;";
                 primenjeno += combo;
- 
+
                 // poziv ka apiju za prikaz po filteru
                 $.ajax({
-                    url: "/api/products/ListaFiltriranihProizvoda",
+                    url: "/api/products/ListaFiltriranihSvihProizvoda",
                     type: "POST",
                     data: JSON.stringify({
                         Id: primenjeno
@@ -284,11 +284,8 @@
                                                     <div class="d-flex mb-3 pb-1">
                                                         <span class="h1 fw-bold mb-0">Shopy Proizvodi</span>
                                                     </div>
-                                                    <h5 class="fw-normal pb-3" style="letter-spacing: 1px;">Detalji i lista svih proizvoda koje ste objavili</h5>
-                                                    <div class="pt-1 mb-3">
-                                                        <a href="DodajProizvod.html" class="btn btn-dark btn-lg btn-block">➕ Dodavanje proizvoda</a>
-                                                    </div>
-                                                    <br />
+                                                    <h5 class="fw-normal pb-3" style="letter-spacing: 1px;">Detalji i lista svih proizvoda koje su objavljeni</h5>
+                                                    <br/>
                                                     <h5 class="fw-semibold" style="letter-spacing: 1px;">Prikaz i filtiriranje proizvoda na Shopy platformi</h5>
                                                     <p class="fw-normal pb-3" style="letter-spacing: 1px;">Moguće je proizovde filtrirati po statusu dostupnosti kao i sortirati ih po ponuđenim kriterijumima.</p>
                                                     <div id="divgreske" class="alert alert-dark d-flex align-items-center mb-4" role="alert">
